# IncubatePi

./: .gitignore  BOM.xlsx  LICENSE.txt  README.md  Useful Links + Info.txt  Useful Links.txt  accessing_pi.txt  overdamped_2.txt
Circuit Design/: BOM.xlsx
Circuit Design Files/: BOM.xlsx  Requirements.txt
Circuit Design Files/Power PCB/Footprints/: gu-molex_0039281023.dra  gu-molex_0039281023.psm  gu-molex_0039281043.dra  gu-molex_0039281043.psm  gu-pi_gpio.dra  gu-pi_gpio.psm  gu-sot236.dra  gu-sot236.psm  r130_50r13.pad  rhdrv4w140p420_550_2x2_960x9-1.psm  s200h120.pad  s320h213.pad
Circuit Design Files/Power PCB/Layout/: layout1.brd
Circuit Design Files/Power PCB/Parts/: rtep5_parts.opj
Circuit Design Files/Power PCB/Schematic/: RTEP5.DSN  RTEP5.opj
Circuit Design Files/Temp PCB/Schematic/: temp_sensor.opj
Circuit Design Files/power_board/: RTEP5.DSN  RTEP5.opj  RTEP5_0.DBK  RTEP5_PARTS.OLB  RTEP5_PARTS_0.OBK
Circuit Design Files/temp_sensor/: gu-smd53ob16.pad  temp_sensor_blank.brd  temp_sensor_v1.brd
Circuit Design Files/temp_sensor/allegro/: eco.txt  netrev.lst  (+5 more)
Data/: down.txt  up.txt
Experimental Data/: 0.05p_0.5d_0i.txt  0.05p_0d_0i.txt  0.145p_0.16d_0.00062i.txt  0.14p_0.16d_0.00055i.txt  0.16p_0.5d_0.00055i.txt  PID Testing.xlsx  PID_constants_calculation.xlsx  P_Only_Test.txt  Temp Rise and Fall.xlsx  down26.txt  final_results.txt  overdamped_1.txt  overdamped_PID_results.xlsx  up34.txt
Mechanical Design/: Hole Diagram Heater Box.pptx  Hole Diagram.pptx
Media/: Initial Proposal Presentation.pptx  incupi_logo.pptx  marketing_diagram.pptx
Media/Demonstration Video Files/: demo_video.mlt  slide_1.pptx  slide_2.pptx
Media/Device Images/: UML_diagram.pptx
Media/Marketing Images/: component_diagram.pptx  device_image_labelled.pptx
Media/Promotional Video Files/: incupi_video.mlt  information_slide.pptx
Software/: CMakeLists.txt  GPIOWriter.cpp  GPIOWriter.h  GPIOWriter.hpp  PID.cpp  PID.h  PID.hpp  PWMCtrl.cpp  PWMCtrl.h  PWMCtrl.hpp  ReadTemp.c  ReadTemp.cpp  ReadTemp.h  ReadTemp.hpp  TempReader.cpp  TempReader.hpp  TestFan.c  TestFan.cpp  accessing_pi.txt  links.txt  main.cpp  window.cpp  window.h  window.hpp  wiringPiPWMTest.c
Software/Test/: CMakeLists.txt  GPIOWriterTest.cpp  PWMCtrlTest.cpp  TempReaderTest.cpp
Temp Sensor OrCAD/temp_sensor/: LIBRARY1.OLB  gu-smd53rec16.pad  temp_sensor_v2_RDT.brd  uSOP8.dra
(+13 files in other folders)
